force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Default_Value__c</fullName>
    <description>A field used to capture a default value to prepopulate the record with when a “New” record is created.</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>