force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Editability__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Editability__c</fullName>
    <description>Sets the UI level Read/Only or Read/Write capability.  NOTE: This must also be checked against the users Field Level Security.</description>
    <label>Editability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read/Write</fullName>
                <default>true</default>
                <label>Read/Write</label>
            </value>
            <value>
                <fullName>Read/Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>