force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Include_in_Overview__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Include_in_Overview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Overview</label>
    <type>Checkbox</type>
</CustomField>