force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Liveperson_API_Field__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Liveperson_API_Field__c</fullName>
    <description>Optional name of property returned by API to write into the field specified by the Salesforce_Field_Name__c</description>
    <label>LivePerson Chat API Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>