force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__LivePerson_Field__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__LivePerson_Field__c</fullName>
    <label>LivePerson Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>