force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__LivePerson_SDK_Field__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__LivePerson_SDK_Field__c</fullName>
    <label>LivePerson Chat SDK Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>