force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Object_Mapping_Config__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Object_Mapping_Config__c</fullName>
    <description>Link to parent object</description>
    <label>Object Mapping Config</label>
    <referenceTo>LiveEngage__Object_Mapping__c</referenceTo>
    <relationshipLabel>Field Mapping Config</relationshipLabel>
    <relationshipName>Field_Mapping_Config</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>