force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Required__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets the UI level required-ness of the field in the when an edit occurs. NOTE: This must also be checked against the users Field Level Security.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>