force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Salesforce_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Salesforce_Field_Name__c</fullName>
    <description>API Name of field on the specified object to write a value to (must be a field on the object specified in the mapping config object type)</description>
    <label>Salesforce Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>