force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Salesforce_Field_Name_Order__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Salesforce_Field_Name_Order__c</fullName>
    <inlineHelpText>This field controls the order on dynamically generated pages.</inlineHelpText>
    <label>Salesforce Field Name Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>