force-app/main/default/objects/LiveEngage__Field_Mapping__c/fields/LiveEngage__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>